--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="tVFiller00InSignUpActivity">Or\nCreate an account using</string>
     <string name="tVGoogleLogIn">Google</string>
     <string name="btnLogIn">Log In</string>
-    <string name="btnSetLocation"> Set Location </string>
+    <string name="btnSetLocation"> Set\nLocation </string>
     <string name="btnSignUp">Sign Up</string>
     <string name="iVGoogleLogo">Google Logo</string>
     <string name="tVSignUpOption">Don\'t have an account?\nSign Up</string>
@@ -22,4 +22,9 @@
     <string name="tVChooseYourLocation">Choose Your Location</string>
     <string name="autocomplete_tVChooseLocation">Choose Location</string>
     <string name="tVWhyLocation">Please select your location,\n so that we can reach you.</string>
+    <string name="tVTagline">Takeouts - anytime, anywhere</string>
+    <string name="iVNotifications">Notifications Icon</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
