--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,9 @@
     <string name="iVNotifications">Notifications Icon</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tVPopular">Popular Options</string>
+    <string name="tVViewMenu">View Menu</string>
+    <string name="tVAddToCart">Add to Cart</string>
+
 
 </resources>
