11th commit - added recyclerview to basket fragment and added food items using BasketAdapter and also set the elevation of dropdown menu for location to null and set large heap as true in application tag of AndroidManifest.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
     <string name="tVPopular">Popular Options</string>
     <string name="tVViewMenu">View Menu</string>
     <string name="tVAddToCart">Add to Cart</string>
+    <string name="tVFragmentBasket">Basket</string>
+    <string name="btnFragmentBasket">Proceed</string>
+    <string name="tVNameOfFoodInBasket">Item Name</string>
+    <string name="tVPriceOfFoodInBasket">Item Price</string>
+    <string name="tVNoOfFoodItemsInBasket">1</string>
+
 
 
 </resources>
